<resources>
    <string name="app_name">Pizza Hut</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="pizza_name">Pizza with ginger</string>
    <string name="medium">Medium</string>
    <string name="price">24,90</string>
    <string name="order_now">Order Now</string>


    <string name="emailPhone">Email/Phone No</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="remember">Remember Me</string>
    <string name="new_user">New to Pizza Hut? Register</string>
    <string name="google">Login with Google</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="facebook">Login with Facebook</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone No</string>
    <string name="confPass">Confirm Password</string>
    <string name="register">Register</string>
    <string name="existingUser">Already have an account? Login</string>

    <string name="title_activity_cart">Cart</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="label_buy_now">Save</string>

    <string name="btnMenu">MENU</string>
    <string name="introT">Topic</string>
    <string name="btnSkip">Skip >></string>
    <string name="promoDes">Description</string>
    <string name="promot">*Terms and Conditions Apply </string>
    <string name="promoOptions">Option </string>
    <string name="promoOptionsDe">Tap here and select your pizza(s)</string>
    <string name="deliveryAddressT">Delivery Details</string>
    <string name="deliveryAddressHint">Enter a new address</string>
    <string name="deliveryAddressTime">When</string>
    <string name="deliveryAddressSave">Save</string>

    <string name="title_activity_maps">Map</string>
    <string name="navbar_myaccount">My Account</string>
    <string name="navbar_myorders">My Orders</string>
    <string name="navbar_Address">Address</string>
    <string name="navbar_resetdetails">Reset Details</string>
    <string name="navbar_home">Home</string>
    <string name="navbar_menu">Menu</string>
    <string name="navbar_promos">Promos</string>
    <string name="navbar_contactus">Contact US</string>
    <string name="navbar_storelocator">Store Locator</string>
    <string name="navbar_logout">Log Out</string>
    <string name="navbar_slogan">For the Love of Pizza</string>


    <string name="feedback">Feedback Form</string>
    <string name="feed_fname">John</string>
    <string name="feed_lname">Silva</string>
    <string name="feed_phone">0768594316</string>
    <string name="feed_email">john@gmail.com</string>
    <string name="inquiry">Inquiry Type</string>
    <string name="message">Message</string>
    <string-array name="spinner_items">
        <item>Contact</item>
        <item>Order Inquiry</item>
        <item>Appreciation</item>
        <item>Complaint</item>
    </string-array>
    <string name="submit">Submit</string>
    <string name="profile">My Account</string>
    <string name="profile_save">Save</string>
    <string name="btnAddToCart">Add to Cart</string>

    <string name="tab_email">Email</string>
    <string name="tab_password">Password</string>

    <string name="tab_phone">Phone Number</string>


    <string name="login1">Login</string>
    <string name="logout1">Logout</string>

    <string name="nav_header_name">Hi John!</string>
</resources>