<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
android:background="@color/colorBackground"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
       android:background="@color/colorBackground"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"

                android:backgroundTint="@color/colorBlack"

                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp">

                    <ImageView
                        android:id="@+id/iv_image"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"

                        android:background="@drawable/pizzai"
                        android:scaleType="centerCrop" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_pizza"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_toEndOf="@+id/iv_image"
                        android:text="@string/pizza_name"
                        android:layout_below="@+id/iv_heart"

                        android:textColor="@color/colorWhite"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_pizza"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"

                        android:layout_toEndOf="@+id/iv_image"

                        android:text="@string/medium"
                        android:textColor="@color/colorWhite"
                        android:textSize="12sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_medium"
                        android:layout_margin="10dp"
                        android:layout_toEndOf="@+id/iv_image"
                        android:text="@string/price"

                        android:textColor="@color/colorWhite"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/iv_heart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"

                        android:background="@drawable/ic_baseline_favorite_border_24"

                        android:scaleType="centerCrop" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_medium"

                        android:layout_toEndOf="@id/tv_price"

                        android:text="@string/order_now"

                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"

                        android:textSize="12sp"

                        app:cornerRadius="20dp"

                        android:backgroundTint="@color/colorpink"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>